--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,16 +19,16 @@
         <div class="slider">
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active" data-bs-interval="2000">
                         <img src="/images/image1.jpg" class="d-block w-90" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <img src="/images/image2.jpg" class="d-block w-90" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <img src="/images/image3.jpg" class="d-block w-90" alt="...">
-                    </div>
-                    <div class="carousel-item">
+                    </div data-bs-interval="2000">
+                    <div class="carousel-item"data-bs-interval="2000">
                         <img src="/images/image4.jpg" class="d-block w-90" alt="...">
                     </div>
                 </div>
@@ -52,6 +52,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+        <script src="js/setting.js"></script>
 </body>
 
 </html>
