--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
         <div class="info_home">
             <p>Welcome to weather app</p>
             <h1>Get The Latest <span>Weather</span> Info Of Your City</h1>
-            <a href="/weather"><button class="btn">CHECK NOW</button></a>
+            <a href="/weather"><button class="btn button">CHECK NOW</button></a>
         </div>
         <div class="slider">
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
