--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -12,9 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/weather">Weather</a>
         </li>
-        <li class="nav-item">
+        {{!-- <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
-        </li>
+        </li> --}}
       </ul>
     </div>
   </div>
