--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -8,27 +8,31 @@
 <body>
     {{>navbar}}
     <div class="weather_container">
-        <div class="searchbar">
-            <input type="text" id="city_name" placeholder="Enter your city name.." autocomplete="none">
-            <button id="submitbtn">Search</button>
-        </div>
-        <div class="resultbox">
-            <div class="date_time">
-                <p id="day">day</p>
-                <p id="date">date</p>
+            <div class="searchbar">
+                <input type="text" id="city_name" placeholder="Enter your city name.." autocomplete="none">
+                <button id="submitbtn">Search</button>
             </div>
-            <div class="weather_detail">
-                <p id="city_name_print">Get output here</p>
-                <div class="temp" id="weathervisiblty">
-                    <p id="temp">temp</p>
-                    <span id='weather'><i class="fa-solid fa-cloud"></i>
-                    </span>
+            <div class="resultbox">
+                <div class="date_time">
+                    <p id="day">day</p>
+                    <p id="date">date</p>
+                </div>
+                <div class="weather_detail">
+                    <p id="city_name_print">Get output here</p>
+                    <div class="temp" id="weathervisiblty">
+                        <p id="temp">temp</p>
+                        <span id='weather'><i class="fa-solid fa-cloud"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     {{>footer}}
-    <script src="js/setting.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+        <script src="js/setting.js"></script>
 </body>
 
 </html>
